--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sumz AI</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='assets/icon-summarizer.svg') }}" type="image/svg+xml">
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css"
       rel="stylesheet"
     />
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- SEO -->
+    <meta property="og:title" content="Sumz AI" />
+    <meta
+      property="og:description"
+      content="A website that can provide conclusions to articles by pasting a URL link."
+    />
+    <meta
+      property="og:image"
+      itemprop="image"
+      content="https://sumz-ai.biz.id/icon-summarizer200x200.png"
+    />
+    <meta property="og:url" content="https://sumz-ai.biz.id/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="300" />
+    <meta property="og:image:height" content="300" />
   </head>
   <body class="bg-gray-100 p-4 md:p-8">
+    <div
+      class="max-w-md mx-auto md:max-w-2xl bg-white rounded-lg shadow-md p-6 md:p-8 mb-6 flex justify-center items-center gap-3"
+    >
+      <img src="{{ url_for('static', filename='assets/icon-summarizer.svg') }}" alt="logo" />
+      <h1 class="text-2xl font-semibold bg-clip-text text-transparent bg-gradient-to-tr from-orange-500 to-rose-500">Sumz AI</h1>
+    </div>
     <div
       class="max-w-md mx-auto md:max-w-2xl bg-white rounded-lg shadow-md p-6 md:p-8"
     >
@@ -27,7 +51,7 @@
         />
         <button
           type="submit"
-          class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-md"
+          class="bg-orange-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-md"
         >
           Ringkas
         </button>
