--- a/templates/result.html
+++ b/templates/result.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sumz AI - Summary</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='assets/icon-summarizer.svg') }}" type="image/svg+xml">
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css"
       rel="stylesheet"
@@ -11,6 +12,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-gray-100 p-4 md:p-8">
+    <div
+      class="max-w-md mx-auto md:max-w-2xl bg-white rounded-lg shadow-md p-6 md:p-8 mb-6 flex justify-center items-center gap-3"
+    >
+      <img src="{{ url_for('static', filename='assets/icon-summarizer.svg') }}" alt="logo" />
+      <h1 class="text-2xl font-semibold bg-clip-text text-transparent bg-gradient-to-tr from-orange-500 to-rose-500">Sumz AI</h1>
+    </div>
     <div
       class="max-w-md mx-auto md:max-w-2xl bg-white rounded-lg shadow-md p-6 md:p-8"
     >
@@ -20,7 +27,7 @@
       <p class="text-gray-700">{{ summary }}</p>
       <a
         href="/"
-        class="block mt-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-md"
+        class="block mt-4 bg-orange-500 text-center hover:bg-orange-700 text-white font-bold py-2 px-4 rounded-md"
         >Ringkas Artikel Lain</a
       >
     </div>
