--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
         />
         <button
           type="submit"
-          class="bg-orange-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-md"
+          class="bg-orange-500 hover:bg-orange-700 text-white font-bold py-2 px-4 rounded-md"
         >
           Ringkas
         </button>
